--- a/index.html
+++ b/index.html
@@ -20,5 +20,38 @@
         </nav>
     </div>
 </header>
+
+<main class="main">
+    <section class="welcome">
+        <div class="container">
+            <h1 class="title welcome__title">New Cafe <br>by <span>StarBucks</span></h1>
+            <p class="welcome__text">
+                Have time to buy the most harmonious drinks in the
+                new Starbucks coffee and don't forget about the discount!
+            </p>
+
+            <div class="welcome__btn-wrapper">
+                <a href="" class="btn">Select a coffee</a>
+                <a href="" class="lik">More</a>
+            </div>
+            .stats
+        </div>
+    </section>
+</main>
+
 </body>
 </html>
+
+
+9k+
+
+2k+
+
+28+
+
+v Users
+
+Happy Customer
+
+Awards Winning
+
