--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <title>Starbucks</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="welcome.css">
 
     <style>
-        .stats__item span::after {
+        .stats__item span {
             content: "+";
             color: #fff;
             font-size: 40px;
@@ -28,7 +29,7 @@
 <body>
 <header class="header">
     <div class="container">
-        <a href="#!" class="logo gradient header__logo ">StarBucks</a>
+        <a href="#!" class="logo text-gradient header__logo ">StarBucks</a>
         <nav class="header__nav">
             <a href="#!" class="header__link">Home</a>
             <a href="#!" class="header__link">Select</a>
@@ -40,49 +41,49 @@
 <main class="main">
     <section class="welcome">
         <div class="container">
-            <h1 class="title welcome__title">New Cafe <br>by <span>StarBucks</span></h1>
-            <p class="welcome__text">
+            <h1 class="title">Nev Cafe <br>by <span class="text-gradient">StarBucks</span></h1>
+            <p class="welcome__desc">
                 Have time to buy the most harmonious drinks in the
                 new Starbucks coffee and don't forget about the discount!
             </p>
+            <div class="welcome__btns-wrapper">
+                <a href="#!" class="btn">Select a coffee</a>
+                <a href="#!" class="link">More</a>
+            </div>
 
-            <div class="welcome__btn-wrapper">
-                <a href="" class="btn">Select a coffee</a>
-                <a href="" class="lik">More</a>
+            <div class="stats">
+                <p class="stats__item">
+                    <span class="stats__num">9k</span>
+                    Premium
+                    Users
+                </p>
+            </div> <div class="stats">
+                <p class="stats__item">
+                    <span class="stats__num">2k</span>
+                    Happy Customer
+                </p>
             </div>
             <div class="stats">
                 <p class="stats__item">
-                    <span>9k+</span>
-
-                    Premium
-
-                    Users
-                </p>
-                <p class="stats__item">
-                    <span>2k+</span>
-                    Happy Customer
-                </p>
-                <p class="stats__item">
-                    <span>28+</span>
+                    <span class="stats__num">28</span>
                     Awards Winning
                 </p>
             </div>
-            
+
             <div class="welcome__img-wrapper">
                 <img src="./images/cups/green-big.png" alt="" class="welcome__img">
             </div>
-            
+
         </div>
     </section>
 </main>
+
 
 </body>
 </html>
 
 
 
-
-v
 
 
 
