--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="welcome.css">
+    <link rel="stylesheet" href="benefist.css">
 
     <style>
         .stats__item span {
@@ -41,34 +42,35 @@
 <main class="main">
     <section class="welcome">
         <div class="container">
-            <h1 class="title">Nev Cafe <br>by <span class="text-gradient">StarBucks</span></h1>
-            <p class="welcome__desc">
-                Have time to buy the most harmonious drinks in the
-                new Starbucks coffee and don't forget about the discount!
-            </p>
-            <div class="welcome__btns-wrapper">
-                <a href="#!" class="btn">Select a coffee</a>
-                <a href="#!" class="link">More</a>
+            <div class="welcome__desc">
+                &nbsp;
+                <h1 class="title welcome__title">Nev Cafe &nbsp; by <span class="text-gradient">StarBucks</span></h1>
+                <p class="welcome__text">
+                    Have time to buy the most harmonious drinks in the
+                    new <br>Starbucks coffee and don't forget about the discount!
+                </p>
+                <div class="welcome__btns-wrapper">
+                    <a href="#!" class="btn">Select a coffee</a>
+                    <a href="#!" class="link">More</a>
+                </div>
+
+                <div class="stats">
+                    <p class="stats__item">
+                        <span class="stats__num">9k</span>
+                        Premium
+                        Users
+                    </p>
+                    <p class="stats__item">
+                        <span class="stats__num">2k</span>
+                        <br> Happy Customer
+                    </p>
+                    <p class="stats__item">
+                        <span class="stats__num">28k</span>
+                        Awards Winning
+                    </p>
+                </div>
             </div>
 
-            <div class="stats">
-                <p class="stats__item">
-                    <span class="stats__num">9k</span>
-                    Premium
-                    Users
-                </p>
-            </div> <div class="stats">
-                <p class="stats__item">
-                    <span class="stats__num">2k</span>
-                    Happy Customer
-                </p>
-            </div>
-            <div class="stats">
-                <p class="stats__item">
-                    <span class="stats__num">28</span>
-                    Awards Winning
-                </p>
-            </div>
 
             <div class="welcome__img-wrapper">
                 <img src="./images/cups/green-big.png" alt="" class="welcome__img">
@@ -76,6 +78,34 @@
 
         </div>
     </section>
+
+    <section class="benefits">
+        <div class="container benefits__container">
+            <div class="benefits__item">
+                <div class="benefits__image-wrapper">
+                    <img src="./images/icons/3d/heart.png" alt="" class="benefits__icons benefits__hart">
+                </div>
+                <p class="benefits__title">Tasty</p>
+                <p class="benefits__desc">We have the most delicious coffee</p>
+            </div>
+            <div class="benefits__item">
+                <div class="benefits__image-wrapper">
+                    <img src="./images/icons/3d/rocket.png" alt="" class="benefits__icons benefits__rocket">
+                </div>
+                <p class="benefits__title">Fast</p>
+                <p class="benefits__desc">Our cafe will serve you quickly</p>
+            </div>
+            <div class="benefits__item">
+                <div class="benefits__image-wrapper">
+                    <img src="./images/icons/3d/money.png" alt="" class="benefits__icons benefits__money">
+                </div>
+                <p class="benefits__title">Available</p>
+                <p class="benefits__desc">Cafe will serveat the most pleasant prices</p>
+            </div>
+
+        </div>
+    </section>
+
 </main>
 
 
