--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="welcome.css">
     <link rel="stylesheet" href="benefist.css">
+    <link rel="stylesheet" href="stats.css">
 
     <style>
         .stats__item span {
@@ -103,6 +104,22 @@
                 <p class="benefits__desc">Cafe will serveat the most pleasant prices</p>
             </div>
 
+        </div>
+    </section>
+
+    <section class="stats">
+        <div class="container">
+            <div class="stats__img-wrapper">
+                <img src="./images/room.jpg" alt="" class="stats__img">
+            </div>
+
+            <div class="stats__text">
+                <h2 class="title stats__title">We hh <span class="text-gradient">delicious</span></h2>
+                <p class="stats__desc">Only in 2021 we have made more thanff
+                    100,000 orders for you, your loved ones, all of you, and in
+                    2022 we are ready to destroy the market</p>
+                <img src="./images/kitchen.jpg" alt="" class="stats__pic">
+            </div>
         </div>
     </section>
 
