--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="welcome.css">
     <link rel="stylesheet" href="benefist.css">
-    <link rel="stylesheet" href="stats.css">
+    <link rel="stylesheet" href="history.css">
 
     <style>
         .stats__item span {
@@ -107,18 +107,18 @@
         </div>
     </section>
 
-    <section class="stats">
+    <section class="history">
         <div class="container">
-            <div class="stats__img-wrapper">
-                <img src="./images/room.jpg" alt="" class="stats__img">
+            <div class="history__img-wrapper">
+                <img src="./images/room.jpg" alt="" class="history__img">
             </div>
 
-            <div class="stats__text">
-                <h2 class="title stats__title">We hh <span class="text-gradient">delicious</span></h2>
-                <p class="stats__desc">Only in 2021 we have made more thanff
+            <div class="history__text">
+                <h2 class="title history__title">We hh <span class="text-gradient">delicious</span></h2>
+                <p class="history__desc">Only in 2021 we have made more thanff
                     100,000 orders for you, your loved ones, all of you, and in
                     2022 we are ready to destroy the market</p>
-                <img src="./images/kitchen.jpg" alt="" class="stats__pic">
+                <img src="./images/kitchen.jpg" alt="" class="history__pic">
             </div>
         </div>
     </section>
