--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="welcome.css">
     <link rel="stylesheet" href="benefist.css">
     <link rel="stylesheet" href="history.css">
+    <link rel="stylesheet" href="products.css">
 
     <style>
         .stats__item span {
@@ -123,9 +124,35 @@
         </div>
     </section>
 
+    <section class="products">
+        <div class="container">
+            <div class="products__text">
+                <h2 class="title products__title">New Our <span class="text-gradient">Products</span></h2>
+                <p class="products__desc">Have time to buy the most harmonious drinks in the new
+                    Starbucks coffee and don't forget about the discount!
+                    Starbucks coffee and don't forget about the discount!
+                </p>
+            </div>
+
+            <div class="products__cards">
+                <div class="card">
+                    <div class="card__img-wrapper">
+                    <img src="./images/cups/green.png" alt="" class="card__img">
+                    </div>
+                    <p class="card__title">Fast</p>
+                    <p class="card__desc">Our cafe will serve you quickly</p>
+                    <div class="card__row">
+                        <p class="card__prise">7,45$</p>
+                        <p class="card__size">330 ml</p>
+                    </div>
+                    <button class="btn card__btn">Buy Product</button>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
 </main>
-
-
 </body>
 </html>
 
