--- a/index.html
+++ b/index.html
@@ -137,9 +137,45 @@
             <div class="products__cards">
                 <div class="card">
                     <div class="card__img-wrapper">
-                    <img src="./images/cups/green.png" alt="" class="card__img">
+                        <img src="./images/cups/green%20without%20shedow.png" alt="" class="card__img">
                     </div>
                     <p class="card__title">Fast</p>
+                    <p class="card__desc">Our cafe will serve you quickly</p>
+                    <div class="card__row">
+                        <p class="card__prise">7,45$</p>
+                        <p class="card__size">330 ml</p>
+                    </div>
+                    <button class="btn card__btn">Buy Product</button>
+                </div>
+                <div class="card">
+                    <div class="card__img-wrapper">
+                        <img src="./images/cups/brown%20without%20shedow.png" alt="" class="card__img">
+                    </div>
+                    <p class="card__title">Fast</p>
+                    <p class="card__desc">Our cafe will serve you quickly</p>
+                    <div class="card__row">
+                        <p class="card__prise">7,45$</p>
+                        <p class="card__size">330 ml</p>
+                    </div>
+                    <button class="btn card__btn">Buy Product</button>
+                </div>
+                <div class="card">
+                    <div class="card__img-wrapper">
+                        <img src="./images/cups/yellow%20without%20shedow.png" alt="" class="card__img">
+                    </div>
+                    <p class="card__title">Fast</p>
+                    <p class="card__desc">Our cafe will serve you quickly</p>
+                    <div class="card__row">
+                        <p class="card__prise">7,45$</p>
+                        <p class="card__size">330 ml</p>
+                    </div>
+                    <button class="btn card__btn">Buy Product</button>
+                </div>
+                <div class="card">
+                    <div class="card__img-wrapper">
+                        <img src="./images/cups/green%20without%20shedow.png" alt="" class="card__img">
+                    </div>
+                    <p class="card__title">Cappuccino</p>
                     <p class="card__desc">Our cafe will serve you quickly</p>
                     <div class="card__row">
                         <p class="card__prise">7,45$</p>
