--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="benefist.css">
     <link rel="stylesheet" href="history.css">
     <link rel="stylesheet" href="products.css">
+    <link rel="stylesheet" href="events.css">
 
     <style>
         .stats__item span {
@@ -126,9 +127,9 @@
 
     <section class="products">
         <div class="container">
-            <div class="products__text">
-                <h2 class="title products__title">New Our <span class="text-gradient">Products</span></h2>
-                <p class="products__desc">Have time to buy the most harmonious drinks in the new
+            <div class="text-row products__text">
+                <h2 class="title text-row__title">New Our <br><span class="text-gradient">Products</span></h2>
+                <p class="text-row__desc">Have time to buy the most harmonious drinks in the new
                     Starbucks coffee and don't forget about the discount!
                     Starbucks coffee and don't forget about the discount!
                 </p>
@@ -187,6 +188,55 @@
 
         </div>
     </section>
+
+    <section class="events">
+        <div class="container">
+            <div class="text-row text-row__revers">
+                <h2 class="title text-row__title">Our New <br><span class="text-gradient">Events</span></h2>
+                <p class="text-row__desc">Only in 2021 we have made more
+                    than 100,000 orders for you, your loved ones, all of
+                    you, and in 2022 we are ready to destroy the market
+                </p>
+            </div>
+
+            <div class="events__inner-wrapper">
+                <div class="event events__prise">
+                    <h3 class="event__title">TWO COFFEE FOR 1 PRICE</h3>
+                    <a href="#!" class="btn event__btn">More</a>
+                </div>
+                <div class="event events__kitchen">
+                    <h3 class="event__title">KITCHEN TOUR</h3>
+                    <a href="#!" class="btn event__btn">More</a>
+                </div>
+                <div class="event events__free">
+                    <h3 class="event__title">FREE COFFEE FOR 3 COFFEE</h3>
+                    <a href="#!" class="btn event__btn">More</a>
+                </div>
+                <div class="event events__social">
+                    <h3 class="event__title">OUR SOCIALS</h3>
+                    <a href="#!" class="btn event__btn">More</a>
+                </div>
+                <div class="event events__chose">
+                    <h3 class="event__title">WHERE ARE YOU CHOOSE US?</h3>
+                    <a href="#!" class="btn event__btn">More</a>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+
+    <!--    -->
+    <!--    -->
+    <!--    -->
+    <!--    More-->
+    <!--    More-->
+    <!--    -->
+    <!--    -->
+    <!--    -->
+    <!--    More-->
+    <!--    More-->
+    <!--    More-->
 
 </main>
 </body>
