--- a/index.html
+++ b/index.html
@@ -191,37 +191,37 @@
 
     <section class="events">
         <div class="container">
-            <div class="text-row text-row__revers">
-                <h2 class="title text-row__title">Our New <br><span class="text-gradient">Events</span></h2>
-                <p class="text-row__desc">Only in 2021 we have made more
-                    than 100,000 orders for you, your loved ones, all of
-                    you, and in 2022 we are ready to destroy the market
+            <div class="text-row text-row--reverse">
+                <h2 class="title text-row__title">Our New <span class="text-gradient">Events</span></h2>
+                <p class="text-row__desc">
+                    Only in 2021 we have made more than 100,000 orders for you, your loved ones, all of you, and in 2022
+                    we are ready to destroy the market
                 </p>
             </div>
 
+
             <div class="events__inner-wrapper">
-                <div class="event events__prise">
+                <div class="event event--price">
                     <h3 class="event__title">TWO COFFEE FOR 1 PRICE</h3>
                     <a href="#!" class="btn event__btn">More</a>
                 </div>
-                <div class="event events__kitchen">
-                    <h3 class="event__title">KITCHEN TOUR</h3>
+                <div class="event event--kitchen">
+                    <h3 class="event__title">KITCHEN<br>TOUR</h3>
                     <a href="#!" class="btn event__btn">More</a>
                 </div>
-                <div class="event events__free">
+                <div class="event event--free">
                     <h3 class="event__title">FREE COFFEE FOR 3 COFFEE</h3>
                     <a href="#!" class="btn event__btn">More</a>
                 </div>
-                <div class="event events__social">
-                    <h3 class="event__title">OUR SOCIALS</h3>
+                <div class="event event--social">
+                    <h3 class="event__title">OUR<br>SOCIALS</h3>
                     <a href="#!" class="btn event__btn">More</a>
                 </div>
-                <div class="event events__chose">
+                <div class="event event--choose">
                     <h3 class="event__title">WHERE ARE YOU CHOOSE US?</h3>
                     <a href="#!" class="btn event__btn">More</a>
                 </div>
             </div>
-
         </div>
     </section>
 
