--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="history.css">
     <link rel="stylesheet" href="products.css">
     <link rel="stylesheet" href="events.css">
+    <link rel="stylesheet" href="contacts.css">
 
     <style>
         .stats__item span {
@@ -225,24 +226,34 @@
         </div>
     </section>
 
+    <section class="contacts">
+        <div class="container">
+            <div class="contacts__text">
+                <h2 class="title contacts__title">Our<br><span class="text-gradient">Contacts</span></h2>
 
-    <!--    -->
-    <!--    -->
-    <!--    -->
-    <!--    More-->
-    <!--    More-->
-    <!--    -->
-    <!--    -->
-    <!--    -->
-    <!--    More-->
-    <!--    More-->
-    <!--    More-->
+                <p class="contacts__desc">
+                    Have time to buy the most harmonious <br> drinks
+                    in the new Starbucks coffee and <br> don't forget about the discount!
+                </p>
+                <a href="+79999999999" class="contacts__phone">+7-999-999-99-99</a>
+            </div>
+
+            <div class="contacts__img-wrapper">
+                <div class="contacts__img-inner-wrapper"></div>
+                <img src="./images/signboard.jpg" alt="" class="contacts__img">
+            </div>
+        </div>
+    </section>
 
 </main>
 </body>
 </html>
 
-
+-->
+<!---->
+<!--we have-->
+<!---->
+<!--
 
 
 
