--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="products.css">
     <link rel="stylesheet" href="events.css">
     <link rel="stylesheet" href="contacts.css">
+    <link rel="stylesheet" href="footer.css">
 
     <style>
         .stats__item span {
@@ -246,16 +247,51 @@
     </section>
 
 </main>
+
+<footer class="footer">
+    <div class="container">
+        <div class="footer__row">
+            <a href="#!" class="logo text-gradient footer__logo ">StarBucks</a>
+            <nav class="footer__nav">
+                <div class="footer__nav-col">
+                    <a href="#!" class="footer__nav-link">Main</a>
+                    <a href="#!" class="footer__nav-link">Buy</a>
+                    <a href="#!" class="footer__nav-link">More</a>
+                </div>
+                <div class="footer__nav-col">
+                    <a href="#!" class="footer__nav-link">We make</a>
+                    <a href="#!" class="footer__nav-link">Process</a>
+                </div>
+                <div class="footer__nav-col">
+                    <a href="#!" class="footer__nav-link">Products</a>
+                    <a href="#!" class="footer__nav-link">Cappuccino</a>
+                    <a href="#!" class="footer__nav-link">Fast</a>
+                    <a href="#!" class="footer__nav-link">Latte</a>
+                </div>
+                <div class="footer__nav-col">
+                    <a href="#!" class="footer__nav-link">Events</a>
+                    <a href="#!" class="footer__nav-link">Drinks</a>
+                    <a href="#!" class="footer__nav-link">Eat</a>
+                </div>
+            </nav>
+
+            <a href="#!" class="footer__up-link">
+                <img src="./images/icons/arrow.svg" alt="" class="footer__arrow">
+            </a>
+        </div>
+
+        <a href="+7-999-999-99-99" class="footer__phone">+7-999-999-99-99</a>
+
+    </div>
+</footer>
+
 </body>
 </html>
 
+
+
+
+<!--StarBucks
+
 -->
-<!---->
-<!--we have-->
-<!---->
-<!--
-
-
-
-
 
