--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 </head>
 <body>
-<header class="header">
+<header id="up" class="header">
     <div class="container">
         <a href="#!" class="logo text-gradient header__logo ">StarBucks</a>
         <nav class="header__nav">
@@ -49,14 +49,14 @@
         <div class="container">
             <div class="welcome__desc">
                 &nbsp;
-                <h1 class="title welcome__title">Nev Cafe &nbsp; by <span class="text-gradient">StarBucks</span></h1>
+                <h1 class="title welcome__title">Nev Cafe <br> by <span class="text-gradient">StarBucks</span></h1>
                 <p class="welcome__text">
                     Have time to buy the most harmonious drinks in the
                     new <br>Starbucks coffee and don't forget about the discount!
                 </p>
                 <div class="welcome__btns-wrapper">
-                    <a href="#!" class="btn">Select a coffee</a>
-                    <a href="#!" class="link">More</a>
+                    <a href="#select" class="btn">Select a coffee</a>
+                    <a href="#more" class="link">More</a>
                 </div>
 
                 <div class="stats">
@@ -127,7 +127,7 @@
         </div>
     </section>
 
-    <section class="products">
+    <section id="more"  class="products">
         <div class="container">
             <div class="text-row products__text">
                 <h2 class="title text-row__title">New Our <br><span class="text-gradient">Products</span></h2>
@@ -275,12 +275,12 @@
                 </div>
             </nav>
 
-            <a href="#!" class="footer__up-link">
+            <a href="#up" class="footer__up-link">
                 <img src="./images/icons/arrow.svg" alt="" class="footer__arrow">
             </a>
         </div>
 
-        <a href="+7-999-999-99-99" class="footer__phone">+7-999-999-99-99</a>
+        <a href="+7-999-999-99-99" class="footer__phone text-gradient">+7-999-999-99-99</a>
 
     </div>
 </footer>
