--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="events.css">
     <link rel="stylesheet" href="contacts.css">
     <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="media.css">
 
     <style>
         .stats__item span {
