--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             </div>
 
             <div class="history__text">
-                <h2 class="title history__title">We hh <span class="text-gradient">delicious</span></h2>
+                <h2 class="title history__title">We make <span class="text-gradient">delicious</span></h2>
                 <p class="history__desc">Only in 2021 we have made more thanff
                     100,000 orders for you, your loved ones, all of you, and in
                     2022 we are ready to destroy the market</p>
@@ -128,13 +128,13 @@
         </div>
     </section>
 
-    <section id="more"  class="products">
+    <section id="more" class="products">
         <div class="container">
             <div class="text-row products__text">
                 <h2 class="title text-row__title">New Our <br><span class="text-gradient">Products</span></h2>
                 <p class="text-row__desc">Have time to buy the most harmonious drinks in the new
                     Starbucks coffee and don't forget about the discount!
-                    Starbucks coffee and don't forget about the discount!
+                    <span class="hide-text-mobile">Starbucks coffee and don't forget about the discount!</span>
                 </p>
             </div>
 
@@ -241,8 +241,9 @@
             </div>
 
             <div class="contacts__img-wrapper">
-                <div class="contacts__img-inner-wrapper"></div>
-                <img src="./images/signboard.jpg" alt="" class="contacts__img">
+                <div class="contacts__img-inner-wrapper">
+                    <img src="./images/signboard.jpg" alt="" class="contacts__img">
+                </div>
             </div>
         </div>
     </section>
@@ -288,8 +289,6 @@
 
 </body>
 </html>
-
-
 
 
 <!--StarBucks
