finished media for phone

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
     <section class="contacts">
         <div class="container">
             <div class="contacts__text">
-                <h2 class="title contacts__title">Our<br><span class="text-gradient">Contacts</span></h2>
+                <h2 class="title contacts__title">Our <span class="text-gradient">Contacts</span></h2>
 
                 <p class="contacts__desc">
                     Have time to buy the most harmonious <br> drinks
